// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card renders without crashing even with no text or emoji data 1`] = `
<div
  className="card"
>
  <h1 />
  <p />
  <button
    aria-label="Remove"
    onClick={[Function]}
    type="button"
  >
    Remove
  </button>
</div>
`;

exports[`Card that it matches an existing snapshot 1`] = `
<div
  className="card"
>
  <h1>
    this is test text string
  </h1>
  <p>
    Take a nap
  </p>
  <button
    aria-label="Remove"
    onClick={[Function]}
    type="button"
  >
    Remove
  </button>
</div>
`;
